결합 전 최종 커밋